[gd_scene load_steps=5 format=3 uid="uid://26kmxqrmgwq"]

[ext_resource type="Script" path="res://scenes/p5/controllers/exawave_controller.gd" id="1_wh62l"]
[ext_resource type="PackedScene" uid="uid://dy8ep82qfwbg1" path="res://scenes/p5/exawave/exawave.tscn" id="2_4srxn"]

[sub_resource type="Animation" id="Animation_k21f3"]
resource_name = "exawaves"
length = 11.0
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.2, 6.2, 10.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"show_base"
}, {
"args": [],
"method": &"start_exa_1"
}, {
"args": [],
"method": &"start_exa_2"
}, {
"args": [],
"method": &"start_exa_3"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwcxg"]
_data = {
"exawaves": SubResource("Animation_k21f3")
}

[node name="ExawaveController" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -17)
script = ExtResource("1_wh62l")

[node name="ExawaveE" parent="." instance=ExtResource("2_4srxn")]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 9.821, 0.02, 23.71)

[node name="ExawaveW" parent="." instance=ExtResource("2_4srxn")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9.821, 0.02, -23.71)

[node name="ExawaveN" parent="." instance=ExtResource("2_4srxn")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 0.999999, 0, 1, 0, -0.999999, 0, -4.37114e-08, 23.71, 0.02, -9.821)

[node name="ExawaveAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fwcxg")
}
